Update 'go-zceusccx' component image to: quay.io/rhtap_qe/go-zceusccx:ca2034dbac0c65f2363316613a4cf5162babe55b@sha256:bebfaf4fd374dcb72a7476f587dd59d42c365b9a349f5ae642a033c8173edde3

--- a/components/go-zceusccx/overlays/development/deployment-patch.yaml
+++ b/components/go-zceusccx/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-zceusccx
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-zceusccx:ca2034dbac0c65f2363316613a4cf5162babe55b@sha256:bebfaf4fd374dcb72a7476f587dd59d42c365b9a349f5ae642a033c8173edde3
+          name: container-image
